[package]
name = "brute-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
daemonize = { version = "0.5.0" }
russh = "0.44.0"
russh-sftp = "2.0.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0.86"
dotenvy = "0.15.7"
serde = { version = "1.0.130", features = ["derive"] }
async-trait = "0.1.81"
russh-keys = "0.44.0"
lazy_static = "1.5.0"
[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[target.'cfg(target_os = "linux")'.dependencies]
daemonize = { version = "0.5.0" }
