[package]
name = "brute-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
async-trait = "0.1.81"
dotenvy = "0.15.7"
russh = "0.44.0"
serde = { version = "1.0.130", features = ["derive"] }
anyhow = "1.0.86"
russh-keys = "0.44.0"
reqwest = { version = "0.12", features = ["json"] }
log = "0.4.22"
env_logger = "0.11.5"
libunftp = "0.20.1"
unftp-sbe-fs = "0.2.5"
