[package]
name = "brute-http"
version = "0.1.0"
edition = "2021"
authors = [
    "Zeljko Vranjes <zeljkovranjes@outlook.com>"
]

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
tokio = { version = "1.40.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
]}
# Actor
actix = "0.13.5"
# Web
actix-web = { version = "4.9", features = ["rustls-0_23"] }
rustls = "0.23.12"
rustls-pemfile = "2"
actix-rt = "2.10.0"
actix-cors = "0.7.0"
actix-web-httpauth = "0.8.2"
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "tls-rustls", "postgres", "derive"] }
ipinfo = "3.0.1"
serde = { version = "1.0.210", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
dotenvy = "0.15.7"
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive", "env"] }
regex = "1.10.6"
derive-getters = "0.5.0"
ipnetwork = "0.20.0"
actix-web-actors = "4.3.1+deprecated"
serde_json = "1.0.128"
once_cell = "1.19.0"
[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
